--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </div>
 
 <div class="marquee marquee--long" style="--tw: 210ch; --ad: 12s;">
-	<span>3 курс • Ищи источники в Израиле • Технологии разработки программного обеспечения • Техника и технологии представления и публикации информации • ИСР - 1, задание 3 • 
+	<span>3 курс • Технологии разработки программного обеспечения • Техника и технологии представления и публикации информации • ИСР - 1, задание 3 • 
    </span>
 </div>
  <h1 style="color:white;"></h>
